--- a/view/pages/StaffManagementFrame.html
+++ b/view/pages/StaffManagementFrame.html
@@ -31,7 +31,7 @@
       <div class="grid grid-cols-2 sm:grid-cols-6 gap-2 bg-[#16A34A] text-center font-semibold text-xs sm:text-sm text-white p-2 rounded-t-xl">
         <div class="p-2 truncate flex items-center justify-center group cursor-pointer">
           <span>Name</span>
-          <i id="sort-arrow" class="fa fa-sort-down text-gray-300 ml-2 group-hover:text-white transition-colors text-base sm:text-sm"></i> <!-- Adjusted arrow icon size -->
+          <i id="sort-arrow" class="fa fa-sort-down text-gray-300 ml-2 group-hover:text-white transition-colors text-base sm:text-sm"></i> 
         </div>
     
         <div class="p-2 truncate">Designation</div>
@@ -40,10 +40,11 @@
         <div class="p-2 truncate">Gender</div>
         <div class="p-2 hidden sm:block">Actions</div>
       </div>
-
       <div class="h-[72vh] overflow-y-auto staff-table-body">
-      
-      </div>
+        <div id="loader" class="flex items-center justify-center h-[72vh] w-full">
+          <div class="w-10 h-10 border-4 border-t-4 border-green-500 border-t-transparent rounded-full animate-spin"></div>
+        </div>
+      </div>      
     </div>
   </div>
 
