--- a/view/pages/StaffManagementFrame.html
+++ b/view/pages/StaffManagementFrame.html
@@ -77,7 +77,7 @@
       class="fixed inset-0 bg-opacity-50 flex justify-center items-center hidden opacity-0 transition-opacity duration-300 ease-out"
     >
       <div
-        class="popup-modal bg-green-100 rounded-lg p-8 w-full shadow-xl sm:w-[60vw] mr-[18vw] mb-[10vh] transform scale-95 transition-transform duration-300 ease-out"
+        class="popup-modal bg-white rounded-lg p-8 w-full drop-shadow-2xl sm:w-[60vw] mr-[18vw] mb-[10vh] transform scale-95 transition-transform duration-300 ease-out"
       >
         <!-- Modal Header -->
         <h1 class="text-center text-xl font-semibold mb-5">Add Staff Member</h1>
@@ -387,7 +387,7 @@
       class="fixed inset-0 bg-opacity-50 flex justify-center items-center hidden opacity-0 transition-opacity duration-300 ease-out"
     >
       <div
-        class="popup-modal bg-green-100 rounded-lg p-8 w-full shadow-xl sm:w-[60vw] mr-[18vw] mb-[10vh] transform scale-95 transition-transform duration-300 ease-out"
+        class="popup-modal bg-white rounded-lg p-8 w-full drop-shadow-2xl sm:w-[60vw] mr-[18vw] mb-[10vh] transform scale-95 transition-transform duration-300 ease-out"
       >
         <!-- Modal Header -->
         <h1 class="text-center text-xl font-semibold mb-5">
@@ -652,6 +652,377 @@
         </div>
       </div>
     </div>
+
+    <!-- view staff details modal -->
+
+    <div
+      id="view-staff-modal"
+      class="fixed inset-0 bg-opacity-50 flex justify-center hidden opacity-0  items-center transition-opacity duration-300 ease-out"
+    >
+      <div
+        class="popup-modal bg-white rounded-lg p-8 w-full drop-shadow-2xl sm:w-[60vw] mr-[18vw] mb-[10vh] transform scale-95 transition-transform duration-300 ease-out"
+      >
+        <!-- Modal Header -->
+        <h1 id="view-staff-id" class="text-center text-xl font-semibold mb-4">
+          Staff Member Details
+        </h1>
+
+        <!-- Modal Body -->
+        <div class="overflow-y-auto h-[60vh] p-2">
+          <!-- First Name and Last Name -->
+          <div class="grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 mt-10">
+            <div class="sm:col-span-3">
+              <label
+                for="first-name"
+                class="block text-sm font-medium text-gray-900"
+                >First name</label
+              >
+              <div class="mt-2">
+                <input
+                  type="text"
+                  readonly
+                  name="first-name"
+                  id="view-first-name"
+                  required
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
+                />
+              </div>
+            </div>
+            <div class="sm:col-span-3">
+              <label
+                for="last-name"
+                class="block text-sm font-medium text-gray-900"
+                >Last name</label
+              >
+              <div class="mt-2">
+                <input
+                  type="text"
+                  name="last-name"
+                  readonly
+                  id="view-last-name"
+                  required
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
+                />
+              </div>
+            </div>
+          </div>
+
+          <!-- Designation and Gender -->
+          <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+            <div class="sm:col-span-3">
+              <label
+                for="designation"
+                class="block text-sm font-medium text-gray-900"
+                >Designation</label
+              >
+              <div class="mt-2">
+                <input
+                  type="text"
+                  name="designation"
+                  readonly
+                  id="view-designation"
+                  required
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
+                />
+              </div>
+            </div>
+            <div class="sm:col-span-3">
+              <label
+                for="gender"
+                class="block text-sm font-medium text-gray-900"
+                >Gender</label
+              >
+              <div class="mt-2">
+                <select
+                  name="gender"
+                  id="view-gender"
+                  required
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
+                >
+                  <option  value="" disabled selected>Select Gender</option>
+                  <option value="MALE">MALE</option>
+                  <option value="FEMALE">FEMALE</option>
+                </select>
+              </div>
+            </div>
+          </div>
+
+          <!-- Date of Birth and Contact Number -->
+          <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+            <div class="sm:col-span-3">
+              <label for="dob" class="block text-sm font-medium text-gray-900"
+                >Date of Birth</label
+              >
+              <div class="mt-2">
+                <input
+                  type="date"
+                  name="dob"
+                  readonly
+                  id="view-dob"
+                  required
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
+                />
+              </div>
+            </div>
+            <div class="sm:col-span-3">
+              <label
+                for="contact-number"
+                class="block text-sm font-medium text-gray-900"
+                >Contact Number</label
+              >
+              <div class="mt-2">
+                <input
+                  type="tel"
+                  name="contact-number"
+                  readonly
+                  id="view-contact-number"
+                  required
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
+                />
+              </div>
+            </div>
+          </div>
+
+          <!-- Email and Role -->
+          <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+            <div class="sm:col-span-3">
+              <label for="email" class="block text-sm font-medium text-gray-900"
+                >Email</label
+              >
+              <div class="mt-2">
+                <input
+                  type="email"
+                  name="email"
+                  readonly
+                  id="view-email"
+                  required
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
+                />
+              </div>
+            </div>
+            <div class="sm:col-span-3">
+              <label for="role" class="block text-sm font-medium text-gray-900"
+                >Role</label
+              >
+              <div class="mt-2">
+                <select
+                  name="role"
+                  id="view-role"
+                  
+                  required
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
+                >
+                  <option value="" disabled selected>Select Role</option>
+                  <option value="MANAGER">MANAGER</option>
+                  <option value="ADMINISTRATIVE">ADMINISTRATIVE</option>
+                  <option value="SCIENTIST">SCIENTIST</option>
+                  <option value="OTHER">OTHER</option>
+                </select>
+              </div>
+            </div>
+          </div>
+
+          <!-- Address Fields -->
+          <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+            <div class="sm:col-span-3">
+              <label
+                for="street-address"
+                class="block text-sm font-medium text-gray-900"
+                >Street Address</label
+              >
+              <div class="mt-2">
+                <input
+                  type="text"
+                  name="street-address"
+                  readonly
+                  id="view-street-address"
+                  required
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
+                />
+              </div>
+            </div>
+            <div class="sm:col-span-3">
+              <label
+                for="address-line-2"
+                class="block text-sm font-medium text-gray-900"
+                >Address Line 2</label
+              >
+              <div class="mt-2">
+                <input
+                  type="text"
+                  readonly
+                  name="address-line-2"
+                  id="view-address-line-2"
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
+                />
+              </div>
+            </div>
+          </div>
+
+          <!-- Country, Province, City -->
+          <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+            <div class="sm:col-span-2">
+              <label
+                for="country"
+                class="block text-sm font-medium text-gray-900"
+                >Country</label
+              >
+              <div class="mt-2">
+                <input
+                  type="text"
+                  name="country"
+                  readonly
+                  id="view-country"
+                  required
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
+                />
+              </div>
+            </div>
+            <div class="sm:col-span-2">
+              <label
+                for="province"
+                class="block text-sm font-medium text-gray-900"
+                >Province</label
+              >
+              <div class="mt-2">
+                <input
+                  type="text"
+                  name="province"
+                  readonly
+                  id="view-province"
+                  required
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
+                />
+              </div>
+            </div>
+            <div class="sm:col-span-2">
+              <label for="city" class="block text-sm font-medium text-gray-900"
+                >City</label
+              >
+              <div class="mt-2">
+                <input
+                  type="text"
+                  name="city"
+                  readonly
+                  id="view-city"
+                  required
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
+                />
+              </div>
+            </div>
+          </div>
+
+          <!-- Postal Code and Joined Date -->
+          <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+            <div class="sm:col-span-3">
+              <label
+                for="postal-code"
+                class="block text-sm font-medium text-gray-900"
+                >Postal Code</label
+              >
+              <div class="mt-2">
+                <input
+                  type="text"
+                  name="postal-code"
+                  readonly
+                  id="view-postal-code"
+                  required
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
+                />
+              </div>
+            </div>
+            <div class="sm:col-span-3">
+              <label
+                for="joined-date"
+                class="block text-sm font-medium text-gray-900"
+                >Joined Date</label
+              >
+              <div class="mt-2">
+                <input
+                  type="date"
+                  name="joined-date"
+                  readonly
+                  id="view-joined-date"
+                  required
+                  class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Modal Footer (Buttons) -->
+        <div class="mt-10 sm:grid-cols-6 poppins-semibold">
+          <div class="sm:col-span-3">
+            <div class="mt-2">
+              <button
+                id="close-view-modal"
+                class="bg-gray-300 w-full rounded-lg py-2 px-4 text-black hover:bg-gray-400 focus:outline-none"
+              >
+                Cancel
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- delete staff modal  -->
+
+     <div
+    id="delete-staff-modal"
+    class="fixed inset-0 bg-opacity-50 flex justify-center  items-center hidden opacity-0 transition-opacity duration-300 ease-out"
+  >
+    <div
+      class="popup-modal bg-white rounded-lg p-8 w-full drop-shadow-2xl sm:w-[30vw] mr-[18vw] mb-[15vh] transform scale-95 transition-transform duration-300 ease-out"
+    >
+      <!-- Modal Header -->
+      <h1 class="text-center text-xl font-bold mb-4 text-gray-800">
+        Are you sure?
+      </h1>
+  
+      <!-- Modal Body -->
+      <div class="text-center p-4">
+        <svg
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          class="group-hover:animate-bounce w-16 h-16 flex items-center justify-center text-red-500 mx-auto mb-8"
+        >
+          <path
+            clip-rule="evenodd"
+            d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
+            fill-rule="evenodd"
+          ></path>
+        </svg>
+        <p class="font-medium text-sm text-gray-600 px-4">
+            Are you sure you want to delete <span id="delete-name"></span> ? This action cannot be undone.
+        </p>
+      </div>
+  
+      <!-- Buttons Section -->
+      <div class="mt-8 grid grid-cols-1 gap-4 sm:grid-cols-2">
+        <!-- Delete Button -->
+        <div>
+          <button
+            id="btn-delete"
+            class="w-full bg-red-600 rounded-lg py-2 px-4 text-white hover:bg-red-700 focus:outline-none transition duration-300"
+          >
+            Delete
+          </button>
+        </div>
+        <!-- Cancel Button -->
+        <div>
+          <button
+            id="close-delete-modal"
+            class="w-full bg-gray-300 rounded-lg py-2 px-4 text-black hover:bg-gray-400 focus:outline-none transition duration-300"
+          >
+            Cancel
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
 
     <script
       type="module"
