--- a/view/pages/StaffManagementFrame.html
+++ b/view/pages/StaffManagementFrame.html
@@ -59,7 +59,7 @@
           </div>
           <div class="p-2 hidden sm:block">Actions</div>
         </div>
-        <div class="h-[72vh] overflow-y-auto staff-table-body">
+        <div class="h-[72vh] table-scroll overflow-y-auto staff-table-body">
           <div id="loader" class="flex items-center justify-center h-[72vh] w-full">
             <div class="w-10 h-10 border-4 border-t-4 border-green-500 border-t-transparent rounded-full animate-spin"></div>
           </div>
