--- a/view/pages/VehicleManagementFrame.html
+++ b/view/pages/VehicleManagementFrame.html
@@ -139,8 +139,8 @@ class="fixed inset-0 bg-opacity-50 flex justify-center items-center hidden opaci
         required
         class="mt-2 block w-full rounded-md bg-white px-3 py-2 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
       >
-        <option value="AVAILABLE">AVAILABLE</option>
-        <option value="NOT AVAILABLE">NOT AVAILABLE</option>
+        <option value="available">AVAILABLE</option>
+        <option value="out of service">OUT OF SERVICE</option>
       </select>
     </div>
 
@@ -176,10 +176,10 @@ class="fixed inset-0 bg-opacity-50 flex justify-center items-center hidden opaci
   </div>
 
   <!-- Modal Footer -->
-  <div class="mt-8 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+  <div class="mt-8 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6 poppins-semibold">
     <div class="sm:col-span-3">
       <button
-        id="save-btn"
+        id="btn-save"
         class="bg-green-600 w-full rounded-lg py-2 text-white hover:bg-green-700 focus:outline-none"
       >
         Save
