Add view vehicle functionality

--- a/view/pages/StaffManagementFrame.html
+++ b/view/pages/StaffManagementFrame.html
@@ -712,6 +712,7 @@
               >
               <div class="mt-2">
                 <input
+                  
                   type="text"
                   name="designation"
                   readonly
@@ -729,6 +730,7 @@
               >
               <div class="mt-2">
                 <select
+                disabled
                   name="gender"
                   id="view-gender"
                   required
@@ -803,7 +805,7 @@
                 <select
                   name="role"
                   id="view-role"
-                  
+                  disabled
                   required
                   class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-2 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-green-600 hover:outline-green-500 sm:text-sm"
                 >
