Add log retrieval functionality

--- a/view/pages/LogManagementFrame.html
+++ b/view/pages/LogManagementFrame.html
@@ -39,6 +39,29 @@
         </button>
       </div>
 
+      <div id="logContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 p-6">
+        
+        <div class="animate-pulse bg-gray-200 rounded-md p-4">
+          <div class="bg-gray-300 h-48 w-full rounded-md"></div>
+          <div class="mt-4 bg-gray-300 h-6 w-3/4 rounded"></div>
+          <div class="mt-2 bg-gray-300 h-6 w-1/2 rounded"></div>
+        </div>
+      
+        <div class="animate-pulse bg-gray-200 rounded-md p-4">
+          <div class="bg-gray-300 h-48 w-full rounded-md"></div>
+          <div class="mt-4 bg-gray-300 h-6 w-3/4 rounded"></div>
+          <div class="mt-2 bg-gray-300 h-6 w-1/2 rounded"></div>
+        </div>
+      
+        <div class="animate-pulse bg-gray-200 rounded-md p-4">
+          <div class="bg-gray-300 h-48 w-full rounded-md"></div>
+          <div class="mt-4 bg-gray-300 h-6 w-3/4 rounded"></div>
+          <div class="mt-2 bg-gray-300 h-6 w-1/2 rounded"></div>
+        </div>
+      </div>
+      
+      
+
       <!-- Add log modal -->
 
       <div
