Add log deletion functionality

--- a/view/pages/LogManagementFrame.html
+++ b/view/pages/LogManagementFrame.html
@@ -372,7 +372,7 @@
     <!-- Delete Field Modal -->
 
     <div
-      id="delete-crop-modal"
+      id="delete-log-modal"
       class="z-[10000] fixed inset-0 bg-opacity-50 flex justify-center items-center hidden opacity-0 transition-opacity duration-300 ease-out"
     >
       <div
@@ -398,7 +398,7 @@
           </svg>
           <p class="font-medium text-sm text-gray-600 px-4">
             Are you sure you want to delete
-            <span id="delete-crop-name"></span> ? This action cannot be undone.
+            <span id="delete-log-name"></span> ? This action cannot be undone.
           </p>
         </div>
 
@@ -407,7 +407,7 @@
           <!-- Delete Button -->
           <div>
             <button
-              id="btn-delete-crop"
+              id="btn-delete-log"
               class="w-full bg-red-600 rounded-lg py-2 px-4 text-white hover:bg-red-700 focus:outline-none transition duration-300"
             >
               Delete
