Add loading indicators to map and log sections; fix log retrieval function

--- a/view/pages/FieldManagementFrame.html
+++ b/view/pages/FieldManagementFrame.html
@@ -46,7 +46,13 @@
         <div
           class="rounded-lg z-index:1 width-full h-[76vh]"
           id="field-map"
-        ></div>
+        >
+        <div id="loader" class="flex items-center justify-center h-full">
+          <div
+            class="w-10 h-10 border-4 border-t-4 border-green-500 border-t-transparent rounded-full animate-spin"
+          ></div>
+        </div>
+      </div>
       </div>
 
       <div
