--- a/view/pages/HomeFrame.html
+++ b/view/pages/HomeFrame.html
@@ -57,7 +57,14 @@
               >
             </div>
           </div>
-          <div id="map" class="w-full h-80 bg-gray-300 rounded"></div>
+          <div id="map" class="w-full h-80 bg-gray-300 rounded">
+
+            <div id="loader" class="flex items-center justify-center h-full">
+              <div
+                class="w-10 h-10 border-4 border-t-4 border-green-500 border-t-transparent rounded-full animate-spin"
+              ></div>
+            </div>
+          </div>
         </div>
 
         <!-- Crop Summary -->
@@ -73,6 +80,7 @@
         <div class="bg-white shadow-lg rounded-lg p-5">
           <h2 class="text-lg font-semibold mb-4 text-center">Staff Members</h2>
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+            
             <div
               class="bg-green-100 text-center py-6 rounded-lg flex flex-col items-center"
             >
@@ -151,7 +159,9 @@
           <div
             class="space-y-2 overflow-y-auto h-48"
             id="today-log-container"
-          ></div>
+          >
+        
+        </div>
         </div>
       </div>
     </div>
